# Rustforge

./: .gitignore  Cargo.toml  Makefile  README.md
bootstrap/: Cargo.toml
bootstrap/src/: assets.rs  boot.rs  console.rs  jobs.rs  lib.rs  realtime.rs  state.rs  web.rs
core-config/: Cargo.toml
core-config/src/: global_config.rs  lib.rs
core-datatable/: Cargo.toml
core-datatable/src/: async_export.rs  csv.rs  datetime.rs  executor.rs  filters.rs  lib.rs  registry.rs  tests.rs  timezone.rs  traits.rs  types.rs
core-db/: Cargo.toml  build.rs
core-db/src/: config.rs  lib.rs  seeder.rs  ts_exports.rs
core-db/src/commands/: cli.rs  mod.rs  seeder.rs
core-db/src/common/: active_record.rs  collection.rs  crypt.rs  macros.rs  mod.rs  model_api.rs  model_observer.rs  pagination.rs  sql.rs  sql_profiler_middleware.rs
core-db/src/common/auth/: hash.rs  mod.rs  permissions.rs  token.rs
core-db/src/framework_models/: failed_job.rs  http_client_log.rs  outbox_job.rs  personal_access_token.rs  webhook_log.rs
core-db/src/infra/: cache.rs  db.rs  mod.rs  storage.rs
core-db/src/platform/: mod.rs
core-db/src/platform/attachments/: mod.rs  model.rs  repo.rs  service.rs  types.rs
core-db/src/platform/auth_subject_permissions/: model.rs  repo.rs
core-db/src/platform/countries/: mod.rs  model.rs  repo.rs  types.rs
core-db/src/platform/countries/seed/: SOURCES.md  countries.seed.json
core-db/src/platform/localized/: model.rs  repo.rs  types.rs
core-db/src/platform/meta/: mod.rs  model.rs  repo.rs  types.rs
core-db/src/platform/personal_access_tokens/: model.rs  repo.rs
core-db/src/platform/sql_profiler/: query_model.rs  request_model.rs  service.rs
core-http-log/: Cargo.toml
core-http-log/src/: http_client.rs  jobs.rs  lib.rs  models.rs  webhook_middleware.rs
core-i18n/: Cargo.toml
core-i18n/src/: config.rs  lib.rs  locale.rs  middleware.rs  translator.rs
core-jobs/: Cargo.toml
core-jobs/src/: api.rs  buffer.rs  cron.rs  lib.rs  queue.rs  runtime.rs  utils.rs  worker.rs
core-mailer/: Cargo.toml
core-mailer/src/: lib.rs
core-notify/: Cargo.toml
core-notify/src/: channel.rs  lib.rs  notifiable.rs
core-realtime/: Cargo.toml
core-realtime/src/: auth.rs  idempotency.rs  lib.rs  presence.rs  publisher.rs  pubsub.rs  registry.rs  server.rs  types.rs
core-realtime/tests/: realtime_e2e.rs
core-web/: Cargo.toml
core-web/src/: auth.rs  authz.rs  contracts.rs  datatable.rs  datetime.rs  decimal.rs  error.rs  ids.rs  lib.rs  logging.rs  openapi.rs  patch.rs  response.rs  server.rs  static_assets.rs  ts_exports.rs
core-web/src/extract/: async_validated_json.rs  clean_json.rs  file_upload.rs  json_cleaner.rs  mod.rs  model.rs  multipart_contract.rs  request_headers.rs  validated_json.rs  validation.rs
core-web/src/middleware/: mod.rs  stack.rs  throttle.rs
core-web/src/rules/: meta.rs  mod.rs
core-web/src/utils/: cookie.rs  datatable.rs  mod.rs
core-web/tests/: rustforge_contract.rs
db-gen/: Cargo.toml
db-gen/schemas/: country.toml
db-gen/src/: config.rs  gen_auth.rs  gen_datatables.rs  gen_enums.rs  gen_localized.rs  gen_models.rs  gen_permissions.rs  lib.rs  permissions.rs  schema.rs  template.rs
db-gen/templates/auth/: guard.rs.tpl  mod.rs.tpl
db-gen/templates/datatables/: mod.generated.rs.tpl  model.rs.tpl
db-gen/templates/enums/: file.rs.tpl  integer_enum.rs.tpl  string_enum.rs.tpl
db-gen/templates/localized/: file.rs.tpl
db-gen/templates/models/: insert.rs.tpl  mod.rs.tpl  model.rs.tpl  query.rs.tpl  update.rs.tpl
db-gen/templates/permissions/: file.rs.tpl
db-gen/tests/: template_generation.rs  typed_first_generation.rs
db-gen/tests/fixtures/full_stack/expected/: permissions.rs
db-gen/tests/fixtures/full_stack/inputs/: configs.toml  permissions.toml
rustforge-contract-macros/: Cargo.toml
rustforge-contract-macros/src/: lib.rs
rustforge-contract-macros/tests/: trybuild.rs
rustforge-contract-macros/tests/ui/: fail_conflict_length.rs  fail_conflict_length.stderr  fail_unknown_rule.rs  fail_unknown_rule.stderr  pass_async_schema.rs  pass_basic.rs  pass_nested_must_match.rs
scaffold/: Cargo.toml  build.rs
scaffold/src/: main.rs  templates.rs
scaffold/template/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOY-SERVER.md  Dockerfile.deploy  Makefile  README.md
scaffold/template/.claude/skills/: add-attachment.md  add-config.md  add-datatable.md  add-endpoint.md  add-job.md  add-migration.md  add-model.md  add-observer.md  add-page.md  add-permission.md  add-seeder.md
scaffold/template/.github/workflows/: deploy.yml
scaffold/template/app/: AGENTS.md  Cargo.toml  configs.toml  permissions.toml  settings.toml
scaffold/template/app/models/: admin.rs  crash_pool.rs  deposit.rs  user_credit_transaction.rs  withdrawal.rs
scaffold/template/app/schemas/: audit_log.toml  bank.toml  company_bank_account.toml  company_crypto_account.toml  content_page.toml  crypto_network.toml  deposit.toml  introducer_change.toml  page.toml  user.toml  user_credit_transaction.toml  withdrawal.toml
scaffold/template/app/src/contracts/: AGENTS.md
scaffold/template/app/src/internal/: AGENTS.md  mod.rs
scaffold/template/app/src/seeds/: content_page_bootstrap_seeder.rs  (+4 more)
scaffold/template/docs/: add-new-portal.md  computed-model-values.md  custom-project-commands.md  realtime-setup.md
scaffold/template/frontend/: AGENTS.md  package-lock.json  package.json  vite.config.admin.ts  vite.config.user.ts
scaffold/template/i18n/: en.json  zh.json
scaffold/template/migrations/: 0000000000009_countries_is_default.sql  0000000001002_pages.sql  0000000002000_users.sql  0000000002001_user_credit_transactions.sql  0000000002500_banks.sql  0000000002501_crypto_networks.sql  0000000003000_audit_logs.sql  0000000003001_deposits.sql  0000000003002_withdrawals.sql  0000000003003_attachments_add_meta.sql
scaffold/template/scripts/: deploy-docker.sh  deploy-poll.sh  deploy.sh  install-ubuntu.sh
scaffold/tests/: lint_allow_policy.rs  scaffold_force_tmp.rs  scaffold_smoke.rs  template_workspace_deps.rs
(+333 files in other folders)
