[package]
name = "bootstrap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }

core-db = { path = "../core-db" }
core-web = { path = "../core-web" }
core-jobs = { path = "../core-jobs" }
core-http-log = { path = "../core-http-log" }
core-i18n = { path = "../core-i18n" }
core-config = { path = "../core-config" }
core-mailer = { path = "../core-mailer" }
core-docs = { path = "../core-docs" }
