[package]
name = "core-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true }
core-i18n = { path = "../core-i18n" }
