[package]
name = "core-datatable"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["parsing", "formatting"] }
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
core-db = { path = "../core-db" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
