[package]
name = "core-mailer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
lettre = { version = "0.11", features = [
    "tokio1",
    "tokio1-native-tls",
    "builder",
] }
async-trait = { workspace = true }
tracing = { workspace = true }
core-jobs = { path = "../core-jobs" }
core-db = { path = "../core-db" }
core-config = { path = "../core-config" }
