[package]
name = "core-realtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
futures-util = "0.3"
redis = { workspace = true }
schemars = { version = "0.8.21", features = ["uuid1", "chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
core-config = { path = "../core-config" }
core-web = { path = "../core-web" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.28"
core-i18n = { path = "../core-i18n" }
