[package]
name = "core-web"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
tower-cookies = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true, features = ["serde"] }
tracing-appender = { workspace = true }
core-db = { path = "../core-db" }
core-datatable = { path = "../core-datatable" }
core-i18n = { path = "../core-i18n" }
core-config = { path = "../core-config" }
sqlx = { workspace = true, features = [
    "postgres",
    "macros",
    "runtime-tokio-rustls",
] }
validator = { workspace = true }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
async-trait.workspace = true
uuid.workspace = true
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = [
    "trace",
    "compression-full",
    "timeout",
    "cors",
    "fs",
    "request-id",
    "util",
    "catch-panic",
    "set-header",
] }
tokio-util = { version = "0.7", features = ["io"] }
axum-client-ip = "1.3.1"
aide = { version = "0.14.1", features = ["axum", "macros", "redoc", "axum-json", "axum-form", "axum-query", "axum-multipart"] }
schemars = { version = "0.8.21", features = ["uuid1", "chrono"] }
