[package]
name = "scaffold"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scaffold"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["full", "macros"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
colored = "3"
rand = "0.10"
base64 = "0.22"
include_dir = "0.7"
