[workspace]
resolver = "2"
members = ["app", "generated"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "time", "uuid", "json"] }
validator = { version = "0.20", features = ["derive"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
toml = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["fs"] }
ts-rs = { version = "10", features = ["serde-compat"] }

bootstrap = { path = "../../bootstrap" }
core-config = { path = "../../core-config" }
core-db = { path = "../../core-db" }
core-datatable = { path = "../../core-datatable" }
core-mailer = { path = "../../core-mailer" }
core-i18n = { path = "../../core-i18n" }
core-jobs = { path = "../../core-jobs" }
core-notify = { path = "../../core-notify" }
core-realtime = { path = "../../core-realtime" }
core-web = { path = "../../core-web" }
db-gen = { path = "../../db-gen" }
